--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,7 @@
 body {
+  max-width: 100%;
+  max-height: 100vh;
+  overflow: hidden;
   background-color: #000;
   color: #fff;
   font-family: Arial, sans-serif;
@@ -30,21 +33,64 @@ body {
   cursor: pointer;
 }
 
-.grid {
+/*.grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
   padding: 20px;
+}*/
+.grid {
+  margin: 12vh 0;
+}
+.ligne {
+  display: flex;
+  width: 100%;
+}
+.card {
+  position: relative; /* Permet de positionner le texte par-dessus l'image */
+  width: 100%;
+  height: 200px; /* Fixe la hauteur de chaque carte */
+  border-radius: 10px;
+  overflow: hidden; /* Assure que l'image ne dépasse pas des bords de la carte */
 }
 
-.card {
-  background-size: cover;
-  background-position: center;
-  border-radius: 10px;
-  height: 200px;
+.boutonMenu {
+  margin: 0 10px;
+}
+
+.card-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: scale-down; /* Couvre l'ensemble de la carte sans distorsion */
+}
+
+.card-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* Centrer le texte */
+  color: #fff; /* Texte blanc */
+  font-size: 24px; /* Taille du texte */
+  font-weight: bold; /* Gras pour le titre */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Ombre portée pour améliorer la lisibilité */
+}
+
+.ligne {
   display: flex;
-  align-items: center;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.card-container {
+  display: flex;
   justify-content: center;
-  font-weight: bold;
-  font-size: 24px;
+  align-items: center;
+}
+
+.first {
+  flex: 1 1 30%;
+}
+
+.second {
+  flex: 1 1 70%;
 }
