--- a/src/styles.css
+++ b/src/styles.css
@@ -40,16 +40,17 @@ body {
   padding: 20px;
 }*/
 .grid {
-  margin: 12vh 0;
+  margin: 2vh 0;
 }
 .ligne {
+  justify-content: space-evenly;
   display: flex;
   width: 100%;
 }
 .card {
   position: relative; /* Permet de positionner le texte par-dessus l'image */
   width: 100%;
-  height: 200px; /* Fixe la hauteur de chaque carte */
+  height: 300px; /* Fixe la hauteur de chaque carte */
   border-radius: 10px;
   overflow: hidden; /* Assure que l'image ne dépasse pas des bords de la carte */
 }
@@ -58,10 +59,17 @@ body {
   margin: 0 10px;
 }
 
+.boutonMenu:hover .card-image img {
+  opacity: 0.7;
+  width: 110%;
+  transition: 0.2s ease-in-out;
+}
+
 .card-image img {
+  object-fit: cover;
+  object-position: center;
   width: 100%;
-  height: 100%;
-  object-fit: scale-down; /* Couvre l'ensemble de la carte sans distorsion */
+  transition: 0.2s ease-in-out;
 }
 
 .card-content {
