--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -38,12 +38,6 @@ body {
   background-color: #c7aa2c;
 }
 
-/*.grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-  padding: 20px;
-}*/
 .grid {
   margin: 2vh 0;
 }
@@ -53,11 +47,11 @@ body {
   width: 100%;
 }
 .card {
-  position: relative; /* Permet de positionner le texte par-dessus l'image */
+  position: relative;
   width: 100%;
-  height: 300px; /* Fixe la hauteur de chaque carte */
+  height: 300px;
   border-radius: 10px;
-  overflow: hidden; /* Assure que l'image ne dépasse pas des bords de la carte */
+  overflow: hidden;
 }
 
 .boutonMenu {
@@ -81,11 +75,11 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); /* Centrer le texte */
-  color: #fff; /* Texte blanc */
-  font-size: 24px; /* Taille du texte */
-  font-weight: bold; /* Gras pour le titre */
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Ombre portée pour améliorer la lisibilité */
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 24px;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .ligne {
