--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.logo-image {
+  height: 40px; /* Ajustez la hauteur pour correspondre à celle des boutons */
+  width: auto; /* Maintient le ratio d'aspect */
+}
